<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_dark_background">

    <TextView
        android:id="@+id/PrivacyPolicyTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy_dialog_title_text"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_margin="@dimen/margin_l"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/PrivacyPolicyLinkTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy_link"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_margin="@dimen/margin_4xl"
        app:layout_constraintTop_toBottomOf="@id/PrivacyPolicyTitleTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/PrivacyPolicyCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy_checkbox_text"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:checked="false"
        android:layout_margin="@dimen/margin_4xl"
        app:layout_constraintTop_toBottomOf="@id/PrivacyPolicyLinkTV"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/PrivacyPolicySubmitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_change_btn_text"
        android:layout_margin="@dimen/margin_4xl"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PrivacyPolicyCheckbox"/>
</androidx.constraintlayout.widget.ConstraintLayout>