<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ascent_blue_card">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/SortDefaultRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_default_btn_text" />

        <RadioButton
            android:id="@+id/SortGradeRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_grade_btn_text" />

        <RadioButton
            android:id="@+id/SortSetterRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_setter_btn_text" />
    </RadioGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/SortTopGuideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent=".33"
        android:orientation="horizontal"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/SortBottomGuideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent=".66"
        android:orientation="horizontal"/>

    <Switch
        android:id="@+id/SortDefaultDirectionSwitch"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:checked="true"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Small"
        android:textOff="@string/sort_descending_text"
        android:textOn="@string/sort_ascending_text"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/SortTopGuideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/SortGradeDirectionSwitch"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:checked="true"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Small"
        android:textOff="@string/sort_descending_text"
        android:textOn="@string/sort_ascending_text"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/SortBottomGuideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SortTopGuideline" />

    <Switch
        android:id="@+id/SortSetterDirectionSwitch"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:checked="true"
        android:switchTextAppearance="@style/TextAppearance.AppCompat.Small"
        android:textOff="@string/sort_descending_text"
        android:textOn="@string/sort_ascending_text"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SortBottomGuideline" />
</androidx.constraintlayout.widget.ConstraintLayout>