<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ascent_blue_card">

    <TextView
        android:id="@+id/AddProblemTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_problem_title_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="36sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/AddProblemNameTIL"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColorHint="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AddProblemTitleTV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/AddProblemNameTIET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_transparent"
            android:hint="@string/add_problem_name_hint_text"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/AddProblemGradeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_problem_grade_text"
        app:layout_constraintTop_toBottomOf="@id/AddProblemNameTIL"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/AddProblemGuideline1"
        android:layout_margin="20dp"
        android:textSize="20sp"/>

    <Spinner
        android:id="@+id/AddProblemGradeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/AddProblemGradeTV"
        app:layout_constraintTop_toBottomOf="@id/AddProblemNameTIL"
        app:layout_constraintBottom_toTopOf="@id/AddProblemGuideline1"
        android:layout_margin="20dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/AddProblemGuideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"/>

    <TextView
        android:id="@+id/AddProblemAttemptTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/add_problem_attempt_spinner_text"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AddProblemGradeTV"
        />

    <Spinner
        android:id="@+id/AddProblemAttemptSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="@id/AddProblemAttemptTV"
        app:layout_constraintBottom_toBottomOf="@id/AddProblemAttemptTV"
        app:layout_constraintLeft_toRightOf="@id/AddProblemAttemptTV" />

    <CheckBox
        android:id="@+id/AddProblemCompleteCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/add_problem_complete_cb_text"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AddProblemAttemptTV" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/AddProblemGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"/>

    <Button
        android:id="@+id/AddProblemBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_problem_btn_text"
        app:layout_constraintTop_toBottomOf="@id/AddProblemCompleteCB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>