<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ascent_blue_card">

    <TextView
        android:id="@+id/SignOutTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out_title_text"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_margin="@dimen/margin_2xl"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/SignOutMiddleGuideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <Button
        android:id="@+id/SignOutCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_btn_text"
        android:layout_margin="@dimen/margin_2xl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/SignOutMiddleGuideline"
        app:layout_constraintTop_toBottomOf="@id/SignOutTitleTV"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/SignOutConfirmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out_option_text"
        android:layout_margin="@dimen/margin_2xl"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/SignOutMiddleGuideline"
        app:layout_constraintTop_toBottomOf="@id/SignOutTitleTV"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>