<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ascent_blue_card">

    <TextView
        android:id="@+id/DeleteDialogTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_problem_text"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/DeleteDialogProblemBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_problem_btn_text"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/DeleteDialogMiddleGuideline"
        app:layout_constraintTop_toBottomOf="@id/DeleteDialogTitleTV"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/DeleteDialogCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_delete_problem_btn_text"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/DeleteDialogMiddleGuideline"
        app:layout_constraintTop_toBottomOf="@id/DeleteDialogTitleTV"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/DeleteDialogMiddleGuideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>
</androidx.constraintlayout.widget.ConstraintLayout>