<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ascent_blue_card">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/AddResultGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/AddResultGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <Button
        android:id="@+id/AddResultBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/add_problem_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AddResultGuideline2" />

    <CheckBox
        android:id="@+id/AddResultCompleteCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_problem_complete_cb_text"
        android:textSize="20sp"
        android:visibility="invisible"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@id/AddResultGuideline2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AddResultGuideline" />

    <Spinner
        android:id="@+id/AddResultAttemptSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@id/AddResultGuideline"
        app:layout_constraintLeft_toRightOf="@id/AddResultAttemptTV"
        app:layout_constraintTop_toBottomOf="@id/AddResultTitleTV" />

    <TextView
        android:id="@+id/AddResultTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_problem_log_attempt_title_text"
        android:textSize="30sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/AddResultAttemptTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/add_problem_attempt_spinner_text"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/AddResultGuideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AddResultTitleTV" />
</androidx.constraintlayout.widget.ConstraintLayout>