<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ascent_blue_card">

    <TextView
        android:id="@+id/ChangeEmailTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_edit_email_option"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ChangeEmailTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_3xl"
        android:layout_marginLeft="@dimen/margin_l"
        android:layout_marginRight="@dimen/margin_l"
        app:hintEnabled="false"
        app:layout_constraintTop_toBottomOf="@id/ChangeEmailTitleTV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ChangeEmailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@color/black_transparent"
            android:textColorHint="@color/white"
            android:hint="@string/enter_new_email_hint_text"
            android:textSize="14sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ChangeEmailMiddleGuideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <Button
        android:id="@+id/ChangeEmailCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_btn_text"
        android:layout_marginTop="@dimen/margin_2xl"
        android:layout_marginBottom="@dimen/margin_2xl"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/ChangeEmailMiddleGuideline"
        app:layout_constraintTop_toBottomOf="@id/ChangeEmailTIL"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/ChangeEmailSubmitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_change_btn_text"
        android:layout_marginTop="@dimen/margin_2xl"
        android:layout_marginBottom="@dimen/margin_2xl"
        app:layout_constraintTop_toBottomOf="@id/ChangeEmailTIL"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/ChangeEmailMiddleGuideline"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>