<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ascent_blue_card">

    <TextView
        android:id="@+id/PasswordInfoDialogTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2xl"
        android:text="@string/password_info_dialog_title_text"
        android:textSize="24sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/PasswordInfoDialogTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:text="@string/password_info_dialog_text"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/PasswordInfoDialogTitleTV"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageView
        android:id="@+id/PasswordInfoDialogIV"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginRight="@dimen/margin_m"
        android:scaleType="fitCenter"
        app:layout_constraintRight_toLeftOf="@id/PasswordInfoDialogTitleTV"
        app:layout_constraintTop_toTopOf="@id/PasswordInfoDialogTitleTV"
        app:srcCompat="@drawable/info_icon" />

    <Button
        android:id="@+id/PasswordInfoDialogCloseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_m"
        android:text="@string/close_btn_text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/PasswordInfoDialogTV"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>