<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/ascent_blue_card">

    <TextView
        android:id="@+id/DeleteAccountTitleTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_account_title_text"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_margin="@dimen/margin_l"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/DeleteAccountPasswordTIL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_3xl"
        android:layout_marginLeft="@dimen/margin_l"
        android:layout_marginRight="@dimen/margin_l"
        android:textColorHint="@color/white"
        app:hintEnabled="false"
        app:passwordToggleTint="@color/ascent_blue"
        app:passwordToggleEnabled="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DeleteAccountTitleTV">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/DeleteAccountPasswordTIET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black_transparent"
            android:textColorHint="@color/white"
            android:hint="@string/current_password_hint"
            android:inputType="textPassword"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/DeleteAccountVerticalGuideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>

    <Button
        android:id="@+id/CancelDeleteAccountBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_btn_text"
        android:layout_marginTop="@dimen/margin_2xl"
        android:layout_marginBottom="@dimen/margin_2xl"
        app:layout_constraintTop_toBottomOf="@id/DeleteAccountPasswordTIL"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/DeleteAccountVerticalGuideline"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/SubmitDeleteAccountBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_change_btn_text"
        android:layout_marginTop="@dimen/margin_2xl"
        android:layout_marginBottom="@dimen/margin_2xl"
        app:layout_constraintTop_toBottomOf="@id/DeleteAccountPasswordTIL"
        app:layout_constraintLeft_toLeftOf="@+id/DeleteAccountVerticalGuideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>